--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="HandheldFriendly" content="true">
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Develop/style.css" />
   </head>
 
   <body>
@@ -44,6 +44,6 @@
 
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="Develop/script.js"></script>
   </body>
 </html>
